Add push notifications and mock notification system
iOS Features:
- Push notification manager with APNs integration
- Device token registration and backend sync
- Push notification status UI in Settings
- Foreground and background notification handling
- Simulated notifications for simulator testing

Backend Features:
- Mock notification generator with realistic messages
- 30+ varied messages from all 4 rabbits
- Rate limiting (max 5/day per user)
- Content deduplication (24-hour window)
- Scheduled every 5 minutes in development
- Logs all notifications to alert_log table

Messages include:
- Market updates from Calm Rabbit (zen, reassuring)
- Analytical insights from Insights Rabbit (data-driven)
- Timely alerts from Alert Rabbit (urgent but calm)
- Casual check-ins from Chill Rabbit (friendly, laid-back)
- Weekly summaries, social buzz, news mentions
- Mindful investment reminders

🐇 Built for testing and demo purposes

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "test-apis": "node test-apis.js",
     "test-price": "node src/jobs/monitorPrices.js",
     "test-news": "node src/jobs/monitorNews.js",
-    "test-social": "node src/jobs/monitorSocial.js"
+    "test-social": "node src/jobs/monitorSocial.js",
+    "test-mock": "node src/jobs/mockNotifications.js"
   },
   "dependencies": {
     "express": "^4.18.2",
